[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/ui/bts1/hover.tres" type="StyleBox" id=1]
[ext_resource path="res://res/ui/bts1/normal.tres" type="StyleBox" id=2]
[ext_resource path="res://res/ui/bts1/pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://pages/sheets/Export_Sheet.gd" type="Script" id=4]

[node name="ExportSheet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="TItre" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 520.0
margin_bottom = 37.0

[node name="Bt_back" type="Button" parent="VBoxContainer/TItre"]
margin_right = 84.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "retour"

[node name="Label" type="Label" parent="VBoxContainer/TItre"]
margin_left = 88.0
margin_right = 520.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exporter la fiche"
align = 1
valign = 1

[node name="ExportType" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 520.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="VBoxContainer/ExportType"]
margin_top = 3.0
margin_right = 249.0
margin_bottom = 34.0
text = "Type d'exportation : "

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/ExportType"]
margin_left = 253.0
margin_right = 341.0
margin_bottom = 37.0
text = "JSON"
items = [ "CSV", null, false, 0, null, "JSON", null, false, 1, null ]
selected = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 520.0
margin_bottom = 86.0

[node name="CSV_OPTION" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 90.0
margin_right = 520.0
margin_bottom = 254.0

[node name="TitreCSV" type="Label" parent="VBoxContainer/CSV_OPTION"]
margin_right = 520.0
margin_bottom = 31.0
text = "Options d'exportation CSV :"

[node name="Row_Sep" type="HBoxContainer" parent="VBoxContainer/CSV_OPTION"]
margin_top = 35.0
margin_right = 520.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="VBoxContainer/CSV_OPTION/Row_Sep"]
margin_top = 5.0
margin_right = 263.0
margin_bottom = 36.0
text = "Separation de lignes : "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CSV_OPTION/Row_Sep"]
margin_left = 267.0
margin_right = 361.0
margin_bottom = 41.0
text = "\\n"

[node name="Col_Sep" type="HBoxContainer" parent="VBoxContainer/CSV_OPTION"]
margin_top = 80.0
margin_right = 520.0
margin_bottom = 121.0

[node name="Label" type="Label" parent="VBoxContainer/CSV_OPTION/Col_Sep"]
margin_top = 5.0
margin_right = 303.0
margin_bottom = 36.0
text = "Separation de colonnes  : "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CSV_OPTION/Col_Sep"]
margin_left = 307.0
margin_right = 401.0
margin_bottom = 41.0
text = "|^|"

[node name="Label" type="Label" parent="VBoxContainer/CSV_OPTION"]
margin_top = 125.0
margin_right = 520.0
margin_bottom = 156.0
text = "Si vous ne savez pas, laisser par d√©faut"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/CSV_OPTION"]
margin_top = 160.0
margin_right = 520.0
margin_bottom = 164.0

[node name="Chemin" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 520.0
margin_bottom = 127.0

[node name="Label" type="Label" parent="VBoxContainer/Chemin"]
margin_top = 3.0
margin_right = 107.0
margin_bottom = 34.0
text = "FIchier : "

[node name="PATH" type="Label" parent="VBoxContainer/Chemin"]
margin_left = 111.0
margin_right = 451.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "NONE "
align = 1
valign = 1
autowrap = true

[node name="Bt_Path" type="Button" parent="VBoxContainer/Chemin"]
margin_left = 455.0
margin_right = 520.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Path"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 131.0
margin_right = 520.0
margin_bottom = 135.0

[node name="ButtonExport" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 139.0
margin_right = 520.0
margin_bottom = 184.0
alignment = 1

[node name="Bt_Export" type="Button" parent="VBoxContainer/ButtonExport"]
margin_left = 185.0
margin_right = 335.0
margin_bottom = 45.0
rect_min_size = Vector2( 150, 45 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Exporter"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 48.0
margin_right = 32.0
margin_bottom = 48.0
rect_min_size = Vector2( 150, 70 )
rect_scale = Vector2( 0.9, 0.9 )
window_title = "Enregistrer un fichier"

[connection signal="pressed" from="VBoxContainer/TItre/Bt_back" to="." method="_on_Bt_back_pressed"]
[connection signal="item_selected" from="VBoxContainer/ExportType/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/Chemin/Bt_Path" to="." method="_on_Bt_Path_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExport/Bt_Export" to="." method="_on_Bt_Export_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
